updated notebook to show how to load wmt dataset

--- a/wimbd_translation_datasets.ipynb
+++ b/wimbd_translation_datasets.ipynb
@@ -2,31 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     /local/home/antonis/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /local/home/antonis/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[dynet] random seed: 1234\n",
-      "[dynet] allocating memory: 32MB\n",
-      "[dynet] memory allocation done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import collections\n",
@@ -43,14 +21,44 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "from src.wimbd_ import WimbdTasks, filter_by_language\n",
+    "from src.wimbd_ import WimbdTasks, filter_by_language, _load_dataset\n",
     "\n",
     "# wt = WimbdTasks()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading dataset wmt\n",
+      "Loading dataset for language pair ('cs', 'en')\n",
+      "Loading dataset for language pair ('de', 'en')\n",
+      "Loading dataset for language pair ('fr', 'en')\n",
+      "Loading dataset for language pair ('es', 'en')\n",
+      "Loading dataset for language pair ('it', 'en')\n",
+      "Loading dataset for language pair ('hu', 'en')\n",
+      "Loading dataset for language pair ('en', 'cs')\n",
+      "Loading dataset for language pair ('en', 'de')\n",
+      "Loading dataset for language pair ('en', 'fr')\n",
+      "Loading dataset for language pair ('en', 'es')\n",
+      "Loading dataset for language pair ('en', 'it')\n",
+      "Loading dataset for language pair ('en', 'hu')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# loading wmt\n",
+    "wmt = _load_dataset(\"wmt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +176,7 @@
        "1   To David Bailey, professor University Western...  22.900639  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,6 +192,168 @@
     "df_common_single = df_common['pythia-12b']\n",
     "\n",
     "df_all_single.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lang_1</th>\n",
+       "      <th>lang_2</th>\n",
+       "      <th>value</th>\n",
+       "      <th>example</th>\n",
+       "      <th>task</th>\n",
+       "      <th>pair</th>\n",
+       "      <th>example_clean</th>\n",
+       "      <th>docs</th>\n",
+       "      <th>coverage</th>\n",
+       "      <th>query</th>\n",
+       "      <th>sum</th>\n",
+       "      <th>count</th>\n",
+       "      <th>id</th>\n",
+       "      <th>gold</th>\n",
+       "      <th>src</th>\n",
+       "      <th>ref</th>\n",
+       "      <th>result</th>\n",
+       "      <th>bleu</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>a question</td>\n",
+       "      <td>reply questions</td>\n",
+       "      <td>68</td>\n",
+       "      <td>{'translation': {'en': 'Answering the question...</td>\n",
+       "      <td>fr-en</td>\n",
+       "      <td>(a question, reply questions)</td>\n",
+       "      <td>A la question : qu'y aura-t-il dans cinq ans ?...</td>\n",
+       "      <td>[train/02.jsonl.gz-2797520, train/11.jsonl.gz-...</td>\n",
+       "      <td>0.072131</td>\n",
+       "      <td>{'translation': {'en': 'Answering the question...</td>\n",
+       "      <td>44314</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1900_8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Answering the question concerning his plans fo...</td>\n",
+       "      <td>A la question : qu'y aura-t-il dans cinq ans ?...</td>\n",
+       "      <td>Il souhaite que Google puisse répondre à des ...</td>\n",
+       "      <td>27.715083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>genre question</td>\n",
+       "      <td>simple questions</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{'translation': {'en': 'Answering the question...</td>\n",
+       "      <td>fr-en</td>\n",
+       "      <td>(genre question, simple questions)</td>\n",
+       "      <td>A la question : qu'y aura-t-il dans cinq ans ?...</td>\n",
+       "      <td>[train/28.jsonl.gz-2942379]</td>\n",
+       "      <td>0.072131</td>\n",
+       "      <td>{'translation': {'en': 'Answering the question...</td>\n",
+       "      <td>44314</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1900_8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Answering the question concerning his plans fo...</td>\n",
+       "      <td>A la question : qu'y aura-t-il dans cinq ans ?...</td>\n",
+       "      <td>Il souhaite que Google puisse répondre à des ...</td>\n",
+       "      <td>27.715083</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           lang_1            lang_2 value  \\\n",
+       "0      a question   reply questions    68   \n",
+       "1  genre question  simple questions     1   \n",
+       "\n",
+       "                                             example   task  \\\n",
+       "0  {'translation': {'en': 'Answering the question...  fr-en   \n",
+       "1  {'translation': {'en': 'Answering the question...  fr-en   \n",
+       "\n",
+       "                                 pair  \\\n",
+       "0       (a question, reply questions)   \n",
+       "1  (genre question, simple questions)   \n",
+       "\n",
+       "                                       example_clean  \\\n",
+       "0  A la question : qu'y aura-t-il dans cinq ans ?...   \n",
+       "1  A la question : qu'y aura-t-il dans cinq ans ?...   \n",
+       "\n",
+       "                                                docs  coverage  \\\n",
+       "0  [train/02.jsonl.gz-2797520, train/11.jsonl.gz-...  0.072131   \n",
+       "1                        [train/28.jsonl.gz-2942379]  0.072131   \n",
+       "\n",
+       "                                               query    sum  count      id  \\\n",
+       "0  {'translation': {'en': 'Answering the question...  44314     20  1900_8   \n",
+       "1  {'translation': {'en': 'Answering the question...  44314     20  1900_8   \n",
+       "\n",
+       "   gold                                                src  \\\n",
+       "0     0  Answering the question concerning his plans fo...   \n",
+       "1     0  Answering the question concerning his plans fo...   \n",
+       "\n",
+       "                                                 ref  \\\n",
+       "0  A la question : qu'y aura-t-il dans cinq ans ?...   \n",
+       "1  A la question : qu'y aura-t-il dans cinq ans ?...   \n",
+       "\n",
+       "                                              result       bleu  \n",
+       "0   Il souhaite que Google puisse répondre à des ...  27.715083  \n",
+       "1   Il souhaite que Google puisse répondre à des ...  27.715083  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_common['pythia-12b'].head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'translation': {'en': 'Answering the question concerning his plans for the next 5 years he said he would like to ensure that Google will be able to reply to questions like \"What shall I do tomorrow?\" , or \"What type of jobs suit me best?\". However, software cannot give the right answers to these seemingly simple questions since the available amount of user information is not sufficient.',\n",
+       "  'fr': 'A la question : qu\\'y aura-t-il dans cinq ans ? Schmidt a répondu qu\\'il aimerait que Google puisse répondre à des questions comme \"Que pourrais-je faire demain?\" ou \"Quel est le travail qui m\\'irait le mieux?\". Cependant, les logiciels ne pourront répondre à ce genre de question, simple à première vue, que le jour où ils en sauront assez sur les utilisateurs.'}}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# see the example\n",
+    "df_common['pythia-12b']['example'].iloc[0]"
    ]
   },
   {
