added how to search for document examples

--- a/wimbd_translation_datasets.ipynb
+++ b/wimbd_translation_datasets.ipynb
@@ -2,9 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     /local/home/antonis/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /local/home/antonis/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[dynet] random seed: 1234\n",
+      "[dynet] allocating memory: 32MB\n",
+      "[dynet] memory allocation done.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import collections\n",
@@ -28,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +192,7 @@
        "1   To David Bailey, professor University Western...  22.900639  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,6 +208,53 @@
     "df_common_single = df_common['pythia-12b']\n",
     "\n",
     "df_all_single.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from elasticsearch import Elasticsearch\n",
+    "import sys\n",
+    "\n",
+    "# XINYI: You may need to change the following line to the path of the wimbd folder on your machine\n",
+    "sys.path.append('/share/edc/home/antonis/LLM-Incidental-Supervision/wimbd')\n",
+    "from wimbd.es import get_documents_containing_phrases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index = 're_pile'\n",
+    "cloud_id = \"m-datasets:dXMtY2VudHJhbDEuZ2NwLmNsb3VkLmVzLmlvJDk1N2U5ODIwZDUxNTQ0YWViMjk0MmQwNzI1NjE0OTQ2JDhkN2M0OWMyZDEzMTRiNmM4NDNhNGEwN2U4NDE5NjRl\"\n",
+    "api_key = \"RlZBbHpZc0J1MEw4LVVWVk9SaTE6bXJlSUM2QnlSQmFHemhwVElVUnZyQQ==\"\n",
+    "es = Elasticsearch(\n",
+    "    cloud_id=cloud_id,\n",
+    "    api_key=api_key,\n",
+    "    retry_on_timeout=True,\n",
+    "    http_compress=True)\n",
+    "\n",
+    "docs = get_documents_containing_phrases(index, [\"the cat sat on the mat\"], \n",
+    "                                        all_phrases=True,\n",
+    "                                        num_documents=10, \n",
+    "                                        es=es)\n",
+    "doc = next(iter(docs))\n",
+    "\n",
+    "\"\"\"\n",
+    "the doc returns the documents for the particular query. \n",
+    "you can sample some examples from the df, and then sample\n",
+    "some pairs/(or singles in _all case) found for each of those examples. \n",
+    "\n",
+    "you can then search for 10 documents (or whatever number you want)\n",
+    "of the keywords, and build a dataset of these examples as you require.\n",
+    "\"\"\"\n",
+    "\n",
+    "doc.keys()"
    ]
   },
   {
