--- a/plot_probs_models.ipynb
+++ b/plot_probs_models.ipynb
@@ -14,10 +14,10 @@
     "from src.wimbd_ import BasePaths as PATHS\n",
     "from src.wimbd_ import DataConfigs as CONFIG\n",
     "from src.wimbd_ import post_filter\n",
-    "from wimbd_process_results import softmax\n",
+    "from src.utils import softmax\n",
     "\n",
     "from datetime import datetime\n",
-    "pd.set_option('display.max_columns', 1000)\n",
+    "pd.set_option('display.max_columns', 10)\n",
     "\n",
     "# Generate a timestamp\n",
     "timestamp = datetime.now().strftime(\"%Y-%m-%d-%H:%M\")"
@@ -29,30 +29,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_models = ['pythia-12b', 'pythia-6.9b', 'pythia-2.8b', 'pythia-1.4b', 'pythia-410m', 'pythia-160m', 'pythia-70m', 'pythia-31m', 'pythia-14m']\n",
-    "large_models = ['pythia-12b', 'pythia-6.9b', 'pythia-2.8b', 'pythia-1.4b']\n",
-    "small_models = ['pythia-410m', 'pythia-160m', 'pythia-70m', 'pythia-31m', 'pythia-14m']\n",
+    "# all_models = ['pythia-12b', 'pythia-6.9b', 'pythia-2.8b', 'pythia-1.4b', 'pythia-410m', 'pythia-160m', 'pythia-70m', 'pythia-31m', 'pythia-14m']\n",
+    "# large_models = ['pythia-12b', 'pythia-6.9b', 'pythia-2.8b', 'pythia-1.4b']\n",
+    "# small_models = ['pythia-410m', 'pythia-160m', 'pythia-70m', 'pythia-31m', 'pythia-14m']\n",
+    "\n",
+    "# all_models = ['OLMo-1B', 'OLMo-7B', 'OLMo-7B-SFT', 'OLMo-7B-Instruct']\n",
+    "# large_models = ['OLMo-7B', 'OLMo-7B-SFT', 'OLMo-7B-Instruct']\n",
+    "# small_models = ['OLMo-1B']\n",
+    "\n",
+    "all_models = ['pythia-12b', 'pythia-6.9b', 'open-instruct-pythia-6.9b-tulu']\n",
     "\n",
     "N_GRAMS = 5\n",
     "# BASE_DIR = \"./results/n-grams/mmlu/test-set/exp_full_None\"\n",
+    "CORPUS = \"pile\"\n",
     "DATASET = \"mmlu\"\n",
+    "TASKS = CONFIG.mmlu_tasks['top_diff_sft_olmo']\n",
     "OMMIT_TASKS = True\n",
     "POST_FILTER = True\n",
     "\n",
-    "BASE_DIR = PATHS.base_ngram_paths[DATASET]['base_path']\n",
+    "BASE_DIR = PATHS.base_ngram_paths[DATASET][CORPUS]['base_path']\n",
     "BASE_PATH = os.path.join(BASE_DIR, f\"{N_GRAMS}\")\n",
     "METHOD = \"0-shot_common\"\n",
     "BASE_PATH_COMMON = os.path.join(BASE_PATH, \"common\")\n",
     "BASE_PATH_ALL = os.path.join(BASE_PATH, \"all\")\n",
-    "FIG_DIR = os.path.join(\"/share/edc/home/antonis/LLM-Incidental-Supervision/incidental-supervision/figures\", DATASET, timestamp)\n",
+    "FIG_DIR = os.path.join(\"/share/edc/home/antonis/LLM-Incidental-Supervision/incidental-supervision/figures\", DATASET, CORPUS)\n",
     "if not os.path.exists(FIG_DIR):\n",
     "    os.makedirs(FIG_DIR)\n",
     "\n",
     "print(f\"BASE PATH: {BASE_PATH}\")\n",
     "\n",
-    "\n",
     "TASKS_OMMIT = CONFIG.task_configs[DATASET]['ommit']\n",
-    "\n",
     "\n",
     "def remove_nested_lists(df):\n",
     "    for col in df.columns:\n",
@@ -62,7 +68,6 @@
     "            # Apply a lambda function to select the first element if it is a list or an array, otherwise keep the element as is\n",
     "            df[col] = df[col].apply(lambda x: x[0] if isinstance(x, (list, np.ndarray)) else x)\n",
     "    return df\n",
-    "\n",
     "\n",
     "def normalize_data(group):\n",
     "    min_value = group.min()\n",
@@ -88,6 +93,10 @@
     "with open(dfs_all_models_pth, \"rb\") as f:\n",
     "    dfs_all_models = pickle.load(f)\n",
     "\n",
+    "# keep only specific tasks\n",
+    "if TASKS is not None:\n",
+    "    dfs_all_models = {model: df[df['task'].isin(TASKS)] for model, df in dfs_all_models.items()}\n",
+    "\n",
     "# keep only the models we are interested in\n",
     "dfs_all_models = {model: dfs_all_models[model] for model in all_models}\n",
     "df_all_models = pd.concat(\n",
@@ -97,9 +106,18 @@
     "\n",
     "df_all_models.head(1)\n",
     "\n",
-    "# # create a perplexity column\n",
-    "# for model in dfs_all_models:\n",
-    "#     dfs_all_models[model][\"perplexity_gold\"] = dfs_all_models[model][\"probs_gold\"].apply(lambda x: 2 ** -np.log2(x))"
+    "# create a perplexity column\n",
+    "for model in dfs_all_models:\n",
+    "    dfs_all_models[model][\"perplexity_gold\"] = dfs_all_models[model][\"probs_gold\"].apply(lambda x: 2 ** -np.log2(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfs_all_models"
    ]
   },
   {
@@ -278,8 +296,8 @@
    "source": [
     "ommit_tasks = ['high_school_computer_science', 'elementary_mathematics',\n",
     "               'college_computer_science', 'high_school_mathematics', \n",
-    "               'public_relations', 'miscellaneous', 'nutrition',\n",
-    "               'machine_learning', 'college_mathematics']\n",
+    "               'public_relations', 'nutrition',\n",
+    "               'machine_learning', 'college_mathematics'] # miscellaneous\n",
     "\n",
     "df_model = df_all_models[df_all_models['model'] == 'pythia-12b']\n",
     "\n",
@@ -1117,8 +1135,7 @@
     "    plt.hist(df_range[f'{variable}_gold'], bins=50, alpha=0.5, label=range)\n",
     "    plt.xlabel(f'{variable}_gold')\n",
     "    plt.ylabel('Frequency')\n",
-    "\n",
-    "\n",
+    "    \n",
     "# plot "
    ]
   },
