--- a/plot_translation.ipynb
+++ b/plot_translation.ipynb
@@ -18,7 +18,7 @@
     "pd.options.display.max_rows = 100\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n"
+    "import seaborn as sns"
    ]
   },
   {
@@ -395,13 +395,6 @@
     "    if 'query' in lang_df_task.columns:\n",
     "        display(lang_df_task)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
