updated to latest local

--- a/plot_probs_models.ipynb
+++ b/plot_probs_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,9 +25,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'CONFIG' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 15\u001b[0m\n\u001b[1;32m     13\u001b[0m CORPUS \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpile\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     14\u001b[0m DATASET \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmmlu\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 15\u001b[0m TASKS \u001b[38;5;241m=\u001b[39m \u001b[43mCONFIG\u001b[49m\u001b[38;5;241m.\u001b[39mmmlu_tasks[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtop_diff_sft_olmo\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m     16\u001b[0m OMMIT_TASKS \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m     17\u001b[0m POST_FILTER \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'CONFIG' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# all_models = ['pythia-12b', 'pythia-6.9b', 'pythia-2.8b', 'pythia-1.4b', 'pythia-410m', 'pythia-160m', 'pythia-70m', 'pythia-31m', 'pythia-14m']\n",
     "# large_models = ['pythia-12b', 'pythia-6.9b', 'pythia-2.8b', 'pythia-1.4b']\n",
@@ -82,9 +94,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "models: dict_keys(['pythia-12b', 'pythia-6.9b', 'pythia-2.8b', 'pythia-1.4b', 'pythia-410m', 'pythia-160m', 'pythia-70m', 'pythia-31m', 'pythia-14m', 'OLMo-7b'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"models: {dfs_all_models.keys()}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'open-instruct-pythia-6.9b-tulu'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 13\u001b[0m\n\u001b[1;32m     10\u001b[0m     dfs_all_models \u001b[38;5;241m=\u001b[39m {model: df[df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtask\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39misin(TASKS)] \u001b[38;5;28;01mfor\u001b[39;00m model, df \u001b[38;5;129;01min\u001b[39;00m dfs_all_models\u001b[38;5;241m.\u001b[39mitems()}\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# keep only the models we are interested in\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m dfs_all_models \u001b[38;5;241m=\u001b[39m \u001b[43m{\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mdfs_all_models\u001b[49m\u001b[43m[\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mall_models\u001b[49m\u001b[43m}\u001b[49m\n\u001b[1;32m     14\u001b[0m df_all_models \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mconcat(\n\u001b[1;32m     15\u001b[0m     [df\u001b[38;5;241m.\u001b[39massign(model\u001b[38;5;241m=\u001b[39mmodel_name) \u001b[38;5;28;01mfor\u001b[39;00m model_name, df \u001b[38;5;129;01min\u001b[39;00m dfs_all_models\u001b[38;5;241m.\u001b[39mitems()]\n\u001b[1;32m     16\u001b[0m )\n\u001b[1;32m     17\u001b[0m df_all_models \u001b[38;5;241m=\u001b[39m remove_nested_lists(df_all_models)\n",
+      "Cell \u001b[0;32mIn[6], line 13\u001b[0m, in \u001b[0;36m<dictcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     10\u001b[0m     dfs_all_models \u001b[38;5;241m=\u001b[39m {model: df[df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtask\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39misin(TASKS)] \u001b[38;5;28;01mfor\u001b[39;00m model, df \u001b[38;5;129;01min\u001b[39;00m dfs_all_models\u001b[38;5;241m.\u001b[39mitems()}\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# keep only the models we are interested in\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m dfs_all_models \u001b[38;5;241m=\u001b[39m {model: \u001b[43mdfs_all_models\u001b[49m\u001b[43m[\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m model \u001b[38;5;129;01min\u001b[39;00m all_models}\n\u001b[1;32m     14\u001b[0m df_all_models \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mconcat(\n\u001b[1;32m     15\u001b[0m     [df\u001b[38;5;241m.\u001b[39massign(model\u001b[38;5;241m=\u001b[39mmodel_name) \u001b[38;5;28;01mfor\u001b[39;00m model_name, df \u001b[38;5;129;01min\u001b[39;00m dfs_all_models\u001b[38;5;241m.\u001b[39mitems()]\n\u001b[1;32m     16\u001b[0m )\n\u001b[1;32m     17\u001b[0m df_all_models \u001b[38;5;241m=\u001b[39m remove_nested_lists(df_all_models)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'open-instruct-pythia-6.9b-tulu'"
+     ]
+    }
+   ],
    "source": [
     "dfs_all_models_pth = os.path.join(BASE_PATH, f\"examples_dfs_{METHOD}_models.pkl\")\n",
     "# dfs_all_models_pth = \"./results/n-grams/mmlu/pile/exp4_filter/test-set/exp_full_None/5/examples_dfs_common_models.pkl\"\n",
@@ -92,6 +134,8 @@
     "# load pickle\n",
     "with open(dfs_all_models_pth, \"rb\") as f:\n",
     "    dfs_all_models = pickle.load(f)\n",
+    "\n",
+    "print(f\"models: {dfs_all_models.keys()}\")\n",
     "\n",
     "# keep only specific tasks\n",
     "if TASKS is not None:\n",
